fixed the visibility of input text in the search bar

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ html,body{
     border-radius: 8px;
     outline: none;
     background-color:whitesmoke;
-    color: white;
+    /* color: white; */
     transition: .3s ease;
    }
    
